--- a/860-CloudflareBypass.conf
+++ b/860-CloudflareBypass.conf
@@ -22,7 +22,7 @@ SecRule &REQUEST_HEADERS:cf-ipcountry "@eq 0" \
     msg:'Cloudflare WAF Bypass attempt.',\
     severity:'CRITICAL'"
 
-SecRule &REQUEST_HEADERS:cdn-loop "eq 0" \
+SecRule &REQUEST_HEADERS:cdn-loop "&eq 0" \
    "id:860003,\
     phase:1,\
     deny,\
@@ -45,3 +45,21 @@ SecRule &REQUEST_HEADERS:x-forwarded-proto "@eq 0" \
     log,\
     msg:'Cloudflare WAF Bypass attempt.',\
     severity:'CRITICAL'"
+
+SecRule &REQUEST_HEADERS:x-forwarded-for "@eq 0" \
+   "id:860006,\
+    phase:1,\
+    deny,\
+    log,\
+    msg:'Cloudflare WAF Bypass attempt.',\
+    severity:'CRITICAL'"
+    
+#I recommend creating a custom transform rule under "HTTP Request Header Modification", This will act as a Token for Cloudflare to authenticate itself with
+#Make sure to generate the Request header's name with a password manager since it's essentially a password
+#SecRule &REQUEST_HEADERS:X-Token-yourIDHERE "@eq 0" \
+#   "id:860007,\
+#    phase:1,\
+#    deny,\
+#    log,\
+#    msg:'Cloudflare WAF Bypass attempt.',\
+#    severity:'CRITICAL'"
