--- a/860-CloudflareBypass.conf
+++ b/860-CloudflareBypass.conf
@@ -56,7 +56,7 @@ SecRule &REQUEST_HEADERS:x-forwarded-for "@eq 0" \
     
 #I recommend creating a custom transform rule under "HTTP Request Header Modification", This will act as a Token for Cloudflare to authenticate itself with
 #Make sure to generate the Request header's name with a password manager since it's essentially a password
-#SecRule &REQUEST_HEADERS:X-Token-yourIDHERE "@eq 0" \
+#SecRule &REQUEST_HEADERS:X-Token-your-ID-Here "@eq 0" \
 #   "id:860007,\
 #    phase:1,\
 #    deny,\
